--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -16,4 +16,18 @@ services:
     ports:
       - ${MARIADB_PORT_3306}:3306
     restart: ${RESTART_POLICY}
-# Add Redis to this
+  postgres:
+    image: postgres
+    restart: ${RESTART_POLICY}
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - PGDATA=${/var/lib/postgresql/data/pgdata}
+    volumes:
+      - ${VOL_CONFIG}/postgres/config:/var/lib/postgresql/data
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
