--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB}
-      - PGDATA=${/var/lib/postgresql/data/pgdata}
+      - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - ${VOL_CONFIG}/postgres/config:/var/lib/postgresql/data
   adminer:
