--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - ${VOL_CONFIG}/postgres/config:/var/lib/postgresql/data
+    ports:
+      - ${POSTGRES_DB_5432}:5432
   adminer:
     image: adminer
     restart: always
