--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -63,6 +63,7 @@ services:
     volumes:
       - ${VOL_CONFIG}/nextcloud/config:/config
       - ${VOL_DOCUMENTS}/nextcloud:/data
+      - ${NEXTCLOUD_EXTERNAL_MOUNT}:/mnt
     ports:
       - ${NEXTCLOUD_PORT_443}:443
     restart: ${RESTART_POLICY}
