--- a/code-server/docker-compose.yml
+++ b/code-server/docker-compose.yml
@@ -3,16 +3,13 @@ services:
   code-server:
     image: ghcr.io/linuxserver/code-server
     container_name: code-server
-
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
-      - PASSWORD=${CODE_SERVER_PASSWORD} #optional
-      - HASHED_PASSWORD=${CODE_SERVER_HASHED_PASSWORD} #optional
-      - SUDO_PASSWORD=${CODE_SERVER_SUDO_PASSWORD} #optional
-      - SUDO_PASSWORD_HASH=${CODE_SERVER_SUDO_PASSWORD_HASH} #optional
-      - PROXY_DOMAIN=${CODE_SERVER_PROXY_DOMAIN} #optional
+      - HASHED_PASSWORD=${CODE_SERVER_HASHED_PASSWORD}
+      - SUDO_PASSWORD_HASH=${CODE_SERVER_SUDO_PASSWORD_HASH}
+      - PROXY_DOMAIN=${CODE_SERVER_PROXY_DOMAIN}
     volumes:
       - ${VOL_CONFIG}/code-server/config:/config
     ports:
