Added docker sock to code-server

--- a/code-server/docker-compose.yml
+++ b/code-server/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - SUDO_PASSWORD_HASH=${CODE_SERVER_SUDO_PASSWORD_HASH}
       - PROXY_DOMAIN=${CODE_SERVER_PROXY_DOMAIN}
     volumes:
+      - ${VOL_DOCKER_SOCK}:/var/run/docker.sock
       - ${VOL_CONFIG}/code-server/config:/config
       - ${VOL_PLAYGROUND}:/playground
     ports:
