--- a/code-server/docker-compose.yml
+++ b/code-server/docker-compose.yml
@@ -7,8 +7,9 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
+      - PASSWORD=${CODE_SERVER_PASSWORD} #optional
       - HASHED_PASSWORD=${CODE_SERVER_HASHED_PASSWORD}
-      - SUDO_PASSWORD=password
+      - SUDO_PASSWORD=${CODE_SERVER_SUDO_PASSWORD}
       - SUDO_PASSWORD_HASH=${CODE_SERVER_SUDO_PASSWORD_HASH}
       - PROXY_DOMAIN=${CODE_SERVER_PROXY_DOMAIN}
     volumes:
