Updated firefly-iii docker image name

--- a/firefly/docker-compose.yml
+++ b/firefly/docker-compose.yml
@@ -14,7 +14,7 @@ version: "3"
 
 services:
   fireflyiii:
-    image: jc5x/firefly-iii:latest
+    image: firefly-iii/core:latest
     volumes:
       - ${VOL_CONFIG}/firefly/upload:/var/www/html/storage/upload
     ports:
