--- a/firefly/docker-compose.yml
+++ b/firefly/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   fireflyiii:
+    env_file: .env
     image: fireflyiii/core:latest
     volumes:
       - ${VOL_CONFIG}/firefly/upload:/var/www/html/storage/upload
