Removed ports from spectre importer

--- a/firefly/docker-compose.yml
+++ b/firefly/docker-compose.yml
@@ -28,5 +28,5 @@ services:
       - FIREFLY_III_URL=${SPECTRE_IMPORTER_FIREFLY_III_URL}
       - SPECTRE_APP_ID=${SPECTRE_IMPORTER_SPECTRE_APP_ID}
       - SPECTRE_SECRET=${SPECTRE_IMPORTER_SPECTRE_SECRET}
-    ports:
-      - ${SPECTRE_IMPORTER_PORT_8080}:8080
+    # ports:
+    #   - ${SPECTRE_IMPORTER_PORT_8080}:8080
