--- a/firefly/docker-compose.yml
+++ b/firefly/docker-compose.yml
@@ -23,10 +23,10 @@ services:
     image: fireflyiii/spectre-importer:latest
     env_file: spectre.env
     network_mode: "host"
-    environment:
-      - FIREFLY_III_ACCESS_TOKEN=${SPECTRE_IMPORTER_FIREFLY_III_ACCESS_TOKEN}
-      - FIREFLY_III_URL=${SPECTRE_IMPORTER_FIREFLY_III_URL}
-      - SPECTRE_APP_ID=${SPECTRE_IMPORTER_SPECTRE_APP_ID}
-      - SPECTRE_SECRET=${SPECTRE_IMPORTER_SPECTRE_SECRET}
+    # environment:
+    #   - FIREFLY_III_ACCESS_TOKEN=${SPECTRE_IMPORTER_FIREFLY_III_ACCESS_TOKEN}
+    #   - FIREFLY_III_URL=${SPECTRE_IMPORTER_FIREFLY_III_URL}
+    #   - SPECTRE_APP_ID=${SPECTRE_IMPORTER_SPECTRE_APP_ID}
+    #   - SPECTRE_SECRET=${SPECTRE_IMPORTER_SPECTRE_SECRET}
     # ports:
     #   - ${SPECTRE_IMPORTER_PORT_8080}:8080
