--- a/firefly/docker-compose.yml
+++ b/firefly/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   fireflyiii:
     env_file: firefly.env
-    image: fireflyiii/core:latest
+    image: fireflyiii/core:version-5.5.12
     volumes:
       - ${VOL_CONFIG}/firefly/upload:/var/www/html/storage/upload
     ports:
