--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -55,17 +55,17 @@ services:
     ports:
       - 9091:9091
     restart: ${RESTART_POLICY}
-  nextcloud:
-    image: ghcr.io/linuxserver/nextcloud
-    container_name: nextcloud
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
-    volumes:
-      - ${VOL_CONFIG}/nextcloud/config:/config
-      - ${VOL_DOCUMENTS}/nextcloud:/data
-      - ${NEXTCLOUD_EXTERNAL_MOUNT}:/mnt
-    ports:
-      - ${NEXTCLOUD_PORT_443}:443
-    restart: ${RESTART_POLICY}
+  # nextcloud:
+  #   image: ghcr.io/linuxserver/nextcloud
+  #   container_name: nextcloud
+  #   environment:
+  #     - PUID=${PUID}
+  #     - PGID=${PGID}
+  #     - TZ=${TZ}
+  #   volumes:
+  #     - ${VOL_CONFIG}/nextcloud/config:/config
+  #     - ${VOL_DOCUMENTS}/nextcloud:/data
+  #     - ${NEXTCLOUD_EXTERNAL_MOUNT}:/mnt
+  #   ports:
+  #     - ${NEXTCLOUD_PORT_443}:443
+  #   restart: ${RESTART_POLICY}
