Better .envs in home, vault and web Updated Readme Renamed homeassisstant to home Added grocy to home Added endlessh to web

--- a/home/.env.sample
+++ b/home/.env.sample
@@ -1,4 +1,4 @@
-############# Common #############
+############# COMMONS #############
 PUID=1000
 PGID=1000
 TZ=Australia/Melbourne
@@ -6,9 +6,7 @@ RESTART_POLICY=unless-stopped
 #----------------------------------
 
 ############# PORTS #############
-VAULTWARDEN_PORT_8080=
-FIREFLY_III_PORT_8080=
-#----------------------------------
+GROCY_PORT_80=
 
 ############# VOLUMES #############
-VOL_VAULT=~/config
+VOL_CONFIG=~/config
