--- a/web/.env.sample
+++ b/web/.env.sample
@@ -24,8 +24,17 @@ SWAG_DNSPLUGIN=
 
 
 ############# ENDLESSH #############
-MSDELAY=10000 #optional
-MAXLINES=32 #optional
-MAXCLIENTS=4096 #optional
-LOGFILE=false #optional
-BINDFAMILY= #optional
+ESSH_MSDELAY=10000 #optional
+ESSH_MAXLINES=32 #optional
+ESSH_MAXCLIENTS=4096 #optional
+ESSH_LOGFILE=false #optional
+ESSH_BINDFAMILY= #optional
+
+
+############# LIBRESPEED #############
+LS_DB_TYPE=sqlite
+LS_DB_NAME=#optional
+LS_DB_HOSTNAME=#optional
+LS_DB_USERNAME=#optional
+LS_DB_PASSWORD=#optional
+LS_DB_PORT=#optional
