Added LS_DB_PORT to env Updated librespeed config location

--- a/web/.env.sample
+++ b/web/.env.sample
@@ -8,6 +8,7 @@ RESTART_POLICY=unless-stopped
 ############# PORTS #############
 AUTHELIA_PORT_9091=9091
 ENDLESSH_PORT_2222=22
+LS_DB_PORT=12345
 #----------------------------------
 
 ############# VOLUMES #############
