--- a/vault/.env.sample
+++ b/vault/.env.sample
@@ -8,7 +8,23 @@ RESTART_POLICY=unless-stopped
 ############# PORTS #############
 VAULTWARDEN_PORT_8080=
 FIREFLY_III_PORT_8080=
+PAPERLESS_NGX_PORT_8000=
+HEDGEDOC_CMD_PORT_3000=12300
 #----------------------------------
 
 ############# VOLUMES #############
-VOL_VAULT=~/config
+VOL_DATA=~/data
+VOL_CONFIG=~/config
+
+############# PAPERLESS-NGX #############
+PAPERLESS_NGX_REDIS_URL=
+
+############# HEDGEDOC #############
+HEDGEDOC_DB_HOST=mariadb
+HEDGEDOC_DB_USER=hedgedoc
+HEDGEDOC_DB_PASS=<secret password>
+HEDGEDOC_DB_NAME=hedgedoc
+HEDGEDOC_DB_PORT=3306
+HEDGEDOC_CMD_DOMAIN=localhost
+HEDGEDOC_CMD_URL_ADDPORT=true #optional
+HEDGEDOC_CMD_PROTOCOL_USESSL=false #optional
