Added Redis in Master Slave Config Added .env.sample to db

--- a/db/.env.sample
+++ b/db/.env.sample
@@ -7,6 +7,8 @@ RESTART_POLICY=unless-stopped
 
 ############# PORTS #############
 MARIADB_PORT_3306=
+REDIS_MASTER_PORT_6379=
+REDIS_SLAVE_PORT_6379=
 #----------------------------------
 
 ############# VOLUMES #############
@@ -18,3 +20,7 @@ MARIADB_MYSQL_ROOT_PASSWORD=
 MARIADB_MYSQL_DATABASE=
 MARIADB_MYSQL_USER=
 MARIADB_MYSQL_PASSWORD=
+
+############# REDIS-CLUSTER #############
+REDIS_MASTER_PASSWORD=
+REDIS_SLAVE_PASSWORD=
