Updated VOL_CONFIG path

--- a/.env.sample
+++ b/.env.sample
@@ -30,7 +30,7 @@ NEXTCLOUD_PORT_443=
 PUID=1000
 PGID=1000
 TZ=Australia/Melbourne
-VOL_CONFIG=/data/config
+VOL_CONFIG=/mnt/dc-config
 VOL_MEDIA=/data/media
 VOL_BOOKS=/data/books
 VOL_DOWNLOADS=/data/downloads
