--- a/3d/.env.sample
+++ b/3d/.env.sample
@@ -10,7 +10,7 @@ BLENDER_PORT_3000=3000
 #----------------------------------
 
 ############# VOLUMES #############
-VOL_CONFIG=~/config
+VOL_CONFIG=/mnt/dc-config
 
 ############# BLENDER #############
 BLENDER_SUBFOLDER=/
