--- a/code-server/.env.sample
+++ b/code-server/.env.sample
@@ -11,7 +11,7 @@ CODE_SERVER_PORT_8443=
 #----------------------------------
 
 ############# VOLUMES #############
-VOL_CONFIG=~/config
+VOL_CONFIG=/mnt/dc-config
 VOL_DOCKER_SOCK=
 VOL_PLAYGROUND=
 
