--- a/db/.env.sample
+++ b/db/.env.sample
@@ -12,8 +12,8 @@ REDIS_SLAVE_PORT_6379=
 #----------------------------------
 
 ############# VOLUMES #############
-VOL_DATA=~/data
-VOL_CONFIG=~/config
+VOL_DATA=/mnt/data
+VOL_CONFIG=/mnt/dc-config
 
 ############# MARIADB #############
 MARIADB_MYSQL_ROOT_PASSWORD=
