--- a/vault/.env.sample
+++ b/vault/.env.sample
@@ -13,8 +13,8 @@ HEDGEDOC_CMD_PORT_3000=12300
 #----------------------------------
 
 ############# VOLUMES #############
-VOL_DATA=~/data
-VOL_CONFIG=~/config
+VOL_DATA=/mnt/data
+VOL_CONFIG=/mnt/dc-config
 
 ############# PAPERLESS-NGX #############
 PAPERLESS_NGX_REDIS_URL=
