--- a/web/.env.sample
+++ b/web/.env.sample
@@ -12,7 +12,7 @@ LS_DB_PORT=12345
 #----------------------------------
 
 ############# VOLUMES #############
-VOL_CONFIG=~/config
+VOL_CONFIG=/mnt/dc-config
 
 ############# SWAG #############
 SWAG_URL=
