--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   redis-master:
     image: bitnami/redis:latest
     ports:
-      - ${REDIS_PORT_6379}:6379
+      - ${REDIS_MASTER_PORT_6379}:6379
     environment:
       - REDIS_REPLICATION_MODE=master
       - REDIS_PASSWORD=${REDIS_MASTER_PASSWORD}
@@ -33,7 +33,7 @@ services:
     environment:
       - REDIS_REPLICATION_MODE=slave
       - REDIS_MASTER_HOST=redis-master
-      - REDIS_MASTER_PORT_NUMBER=${REDIS_PORT_6379}
+      - REDIS_MASTER_PORT_NUMBER=${REDIS_MASTER_PORT_6379}
       - REDIS_MASTER_PASSWORD=${REDIS_MASTER_PASSWORD}
       - REDIS_PASSWORD=${REDIS_SLAVE_PASSWORD}
     restart: ${RESTART_POLICY}
