Redis Replica points to 6379

--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     environment:
       - REDIS_REPLICATION_MODE=slave
       - REDIS_MASTER_HOST=redis-master
-      - REDIS_MASTER_PORT_NUMBER=${REDIS_MASTER_PORT_6379}
+      - REDIS_MASTER_PORT_NUMBER=6379
       - REDIS_MASTER_PASSWORD=${REDIS_MASTER_PASSWORD}
       - REDIS_PASSWORD=${REDIS_SLAVE_PASSWORD}
     restart: ${RESTART_POLICY}
