Mqtt added to home

--- a/home/docker-compose.yaml
+++ b/home/docker-compose.yaml
@@ -25,3 +25,13 @@ services:
     restart: ${RESTART_POLICY}
     ports:
       - ${GROCY_PORT_80}:80
+  mqtt:
+    image: eclipse-mosquitto:latest
+    container_name: "mqtt"
+    restart: ${RESTART_POLICY}
+    network_mode: host
+    ports:
+      - ${MQTT_PORT_1883}:1883
+      - ${MQTT_PORT_9001}:9001
+    volumes:
+      - ${VOL_CONFIG}/mqtt/config:/mosquitto
