--- a/home/.env.sample
+++ b/home/.env.sample
@@ -7,6 +7,8 @@ RESTART_POLICY=unless-stopped
 
 ############# PORTS #############
 GROCY_PORT_80=
+MQTT_PORT_1883=
+MQTT_PORT_9001=
 
 ############# VOLUMES #############
 VOL_CONFIG=/mnt/dc-config
